--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "example": "node node_modules/babel-cli/bin/babel-node examples/test.js",
     "clean": "node node_modules/rimraf/bin.js dist",
-    "build": "node node_modules/babel-cli/bin/babel.js src --out-dir dist",
+    "build": "node node_modules/babel-cli/bin/babel.js --presets=env --plugins=transform-object-rest-spread src --out-dir dist",
     "prepublish": "npm run clean && npm run build"
   },
   "repository": {
